--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.prod.js --mode production"
+    "build": "webpack --config ./webpack.prod.js --mode production",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.3.3",
@@ -13,8 +14,8 @@
     "@babel/preset-react": "^7.14.5",
     "axios": "^0.21.1",
     "babel-loader": "^8.0.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^7.2.4",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
@@ -22,6 +23,25 @@
     "webpack-dev-server": "^3.1.14"
   },
   "devDependencies": {
-    "css-loader": "^2.1.0"
+    "babel-jest": "^23.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^2.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "jest": "^27.1.0",
+    "jest-enzyme": "^7.1.2",
+    "redux-mock-store": "^1.5.4"
+  },
+  "jest": {
+    "testRegex": "test/.*.(js|jsx)$",
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    }
   }
 }
