--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "build": "webpack"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "style-loader": "^0.23.1"
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "style-loader": "^0.23.1",
+    "styled-components": "^5.3.1",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
