--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode=development",
-    "build": "webpack"
+    "build": "webpack --mode=production"
   },
   "dependencies": {
     "file-loader": "^6.2.0",
