--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "A simple todo list",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack serve --mode=development",
+    "build": "webpack --mode=production"
   },
   "dependencies": {
+    "react": "^17.0.2",
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^3.1.14",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
-    "css-loader": "^2.1.0"
+    "css-loader": "^6.6.0",
+    "@babel/preset-react": "^7.14.5",
+    "html-webpack-plugin": "^5.3.2"
   }
 }
