--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "redux-saga": "^1.0.0"
   },
   "devDependencies": {
     "css-loader": "^6.6.0",
